test_fm/_test15.ref
Error: redeclaration of 'x' (defined in a superclass of 'Subclass') as field in file '_test15.nj' on line 12
