test_fm/_test15.nj
//
// field declaration in non-public class
// field redeclaration in superclass
//

public class Main extends Object {
    Integer x;
    public static void main() {}
}

class Subclass extends Main {
    Integer x;
}
